--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@ title: About
 
 <h2>About</h2>
 
+<p>BLISS AI Inc. aims to provide AI solutions that perceive, understand, and communicate with humans and spaces.</p>
 <p>
 BLLISS AI Inc. 
 
