--- a/about.html
+++ b/about.html
@@ -5,7 +5,54 @@ title: About
 
 <h2>About</h2>
 
-<p>BLISS AI Inc. aims to provide AI solutions that perceive, understand, and communicate with humans and spaces.</p>
+<h1>BLISS AI Inc. aims to provide AI solutions that perceive, understand, and communicate with humans and spaces.</h1>
+<hr/>
+Here’s a well-structured summary of Bliss AI’s mission and solutions in English:
+
+🌟 Bliss AI?
+✅ Cutting-edge video AI technology
+✅ Focus on safety, efficiency, and automation
+✅ Versatile applications across mobility, security, healthcare, and logistics
+✅ Committed to innovation and real-world impact
+Bliss AI is building the future of intelligent, video-driven autonomy. 
+
+🌍 Mission Statement
+Bliss AI is dedicated to revolutionizing autonomous driving technology through cutting-edge video AI solutions. Our goal is to enhance safety, efficiency, and innovation in transportation, enabling a seamless and intelligent driving experience for everyone.
+
+1️⃣ AI-Powered Autonomous Driving
+	•	Real-time object detection for pedestrians, vehicles, and road signs.
+	•	AI-driven path prediction to optimize driving decisions.
+	•	Video-based simulation for training and testing autonomous vehicles.
+
+2️⃣ Smart Traffic & Mobility Solutions
+	•	AI-based traffic monitoring to reduce congestion.
+	•	Smart parking management using camera-based detection.
+	•	Public transportation safety and optimization with real-time video AI.
+
+3️⃣ AI-Enhanced Security & Surveillance
+	•	Automated anomaly detection for crime and accident prevention.
+	•	License plate recognition for secure access control.
+	•	Drone surveillance powered by AI for large-scale monitoring.
+
+4️⃣ Industrial & Logistics Automation
+	•	AI-powered warehouse automation and real-time inventory tracking.
+	•	Autonomous delivery robots for logistics and last-mile delivery.
+	•	Factory safety monitoring with AI-based risk detection.
+
+5️⃣ AI in Healthcare & Emergency Response
+	•	AI-assisted ambulance navigation for faster emergency response.
+	•	Elderly and disability support with real-time monitoring.
+	•	AI-driven hospital security systems for enhanced patient safety.
+
+6️⃣ Sports & Entertainment AI
+	•	Automated sports analytics for player performance tracking.
+	•	Smart broadcasting systems with AI-driven camera tracking.
+	•	VR/AR integration for autonomous driving simulation experiences.
+
+
+
+
+
 <p>
 BLLISS AI Inc. 
 
