--- a/about.html
+++ b/about.html
@@ -3,61 +3,25 @@ layout: about
 title: About
 ---
 
-<h2>About</h2>
+<h1>About</h1>
 
-<h1>BLISS AI Inc. aims to provide AI solutions that perceive, understand, and communicate with humans and spaces.</h1>
+<h2>BLISS AI Inc. aims to provide AI solutions that perceive, understand, and communicate with humans and spaces.</h2>
 <hr/>
-Here’s a well-structured summary of Bliss AI’s mission and solutions in English:
+<h3>Multimodal AI Agent for Surveillance Beyond</h3>
 
-🌟 Bliss AI?
-✅ Cutting-edge video AI technology
-✅ Focus on safety, efficiency, and automation
-✅ Versatile applications across mobility, security, healthcare, and logistics
-✅ Committed to innovation and real-world impact
-Bliss AI is building the future of intelligent, video-driven autonomy. 
-
-🌍 Mission Statement
-Bliss AI is dedicated to revolutionizing autonomous driving technology through cutting-edge video AI solutions. Our goal is to enhance safety, efficiency, and innovation in transportation, enabling a seamless and intelligent driving experience for everyone.
-
-1️⃣ AI-Powered Autonomous Driving
-	•	Real-time object detection for pedestrians, vehicles, and road signs.
-	•	AI-driven path prediction to optimize driving decisions.
-	•	Video-based simulation for training and testing autonomous vehicles.
-
-2️⃣ Smart Traffic & Mobility Solutions
-	•	AI-based traffic monitoring to reduce congestion.
-	•	Smart parking management using camera-based detection.
-	•	Public transportation safety and optimization with real-time video AI.
-
-3️⃣ AI-Enhanced Security & Surveillance
-	•	Automated anomaly detection for crime and accident prevention.
-	•	License plate recognition for secure access control.
-	•	Drone surveillance powered by AI for large-scale monitoring.
-
-4️⃣ Industrial & Logistics Automation
-	•	AI-powered warehouse automation and real-time inventory tracking.
-	•	Autonomous delivery robots for logistics and last-mile delivery.
-	•	Factory safety monitoring with AI-based risk detection.
-
-5️⃣ AI in Healthcare & Emergency Response
-	•	AI-assisted ambulance navigation for faster emergency response.
-	•	Elderly and disability support with real-time monitoring.
-	•	AI-driven hospital security systems for enhanced patient safety.
-
-6️⃣ Sports & Entertainment AI
-	•	Automated sports analytics for player performance tracking.
-	•	Smart broadcasting systems with AI-driven camera tracking.
-	•	VR/AR integration for autonomous driving simulation experiences.
+<li>Cutting-edge vide & multimodal AI technology</li>
+<li>Focus on safety, efficiency, and automation</li>
+<li>Versatile applications across mobility, security, healthcare, and logistics</li>
+<li>Committed to innovation and real-world impact </li>
 
 
+<h3>Bliss AI is building the future of multimodal-intelligent, video-driven autonomy.</h3>
+
+<hr>
 
 
-
+<br>
 <p>
 BLLISS AI Inc. 
-
 주소 : 경기도 용인시 기흥구 동백3로 11번길 8-1 403호 (중동, 제일프라자)
-</p>
-
-<p>
 </p>
