--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://example.com" />
-    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=https://blissai.notion.site" />
+    <title>Redirecting... Bliss AI</title>
   </head>
   <body>
-    <p>Redirecting to <a href="https://example.com">https://example.com</a></p>
+    <p>Redirecting to <a href="https://blissai.notion.site">https://blissai.notion.site</a></p>
   </body>
 </html>
